force-app/main/default/objects/SPEN_IMForm__c/SPEN_IMForm__c.object-meta.xml
<CustomObject>
    <description>Object used to capture the I&amp;M Forms</description>
    <label>I&amp;M Form</label>
    <nameField>
        <displayFormat>IMF-{0000}</displayFormat>
        <label>I&amp;M Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>I&amp;M Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>