force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_AreYouAbleToPenetrateTheConcrete__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AreYouAbleToPenetrateTheConcrete__c</fullName>
    <description>Field used to capture the &quot;Are you able to penetrate the concrete surface using a sharp instrument?&quot;. Used in the RAAC Concrete Survey</description>
    <inlineHelpText>By using a sharp instrument</inlineHelpText>
    <label>Are you able to penetrate the concrete?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>