force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_BuildingName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BuildingName__c</fullName>
    <description>Field used to capture the building name. Used in the RAAC Concrete Survey</description>
    <label>Building name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>