force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_BuildingNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BuildingNumber__c</fullName>
    <description>Field used to store the building number that is used on RAAC Concrete Survey.</description>
    <label>Substation number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>