force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_BuildingType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BuildingType__c</fullName>
    <description>Field used to capture the building type.
Used in the RAAC Concrete Survey</description>
    <label>Building type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freestanding</fullName>
            </value>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Integral</fullName>
            </value>
            <value>
                <fullName>Embedded</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>