force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_CanTheRoofBeAccessedExternally__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CanTheRoofBeAccessedExternally__c</fullName>
    <description>Field used to capture the &quot;Can the roof be accessed externally?&quot;. Used in the RAAC Concrete Survey</description>
    <label>Can the roof be accessed externally</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>