force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_District__c.field-meta.xml
<CustomField>
    <fullName>SPEN_District__c</fullName>
    <description>Field used to store district value. 

Used in I&amp;M Forms.</description>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_District</valueSetName>
    </valueSet>
</CustomField>