force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_DoTheRoofHaveChamferedEdge__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DoTheRoofHaveChamferedEdge__c</fullName>
    <description>Field used to capture the &quot;Do the roof have a chamfered edge?&quot;. Used in the RAAC Concrete Survey</description>
    <label>Do the roof panels have a chamfered edge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>