force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_HasTheAsbestosReportBeenConsulted__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HasTheAsbestosReportBeenConsulted__c</fullName>
    <description>Field used to capture the &quot;Has the asbestos report been consulted?&quot;. Used in the RAAC Concrete Survey</description>
    <label>Has the asbestos report been consulted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>