force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_IfNotAccessibleWhy__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IfNotAccessibleWhy__c</fullName>
    <description>Field used to capture the &quot;If not accessible, why?&quot;. Used in the RAAC Concrete Survey</description>
    <label>If not accessible, why</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>