force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_IsItSafeToInspectTheRoof__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsItSafeToInspectTheRoof__c</fullName>
    <description>Field used to capture the &quot;Is it safe to inspect the roof?&quot;. Used in the RAAC Concrete Survey</description>
    <label>Is it safe to inspect the roof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>