force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_IsRAACSuspected__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsRAACSuspected__c</fullName>
    <description>Field used to capture the &quot;Is RAAC suspected?&quot;. Used in the RAAC Concrete Survey</description>
    <label>Is RAAC suspected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>