force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_NumberOfBuildingsOnSite__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NumberOfBuildingsOnSite__c</fullName>
    <description>Field to store the number of buildings on Site</description>
    <label>Number of buildings on site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>