force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_RiskOfAsbestosInCeilingAreas__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RiskOfAsbestosInCeilingAreas__c</fullName>
    <description>Field used to capture the &quot;Is there any risk of asbestos in the ceiling areas?&quot;. Used in the RAAC Concrete Survey</description>
    <label>Risk of asbestos in ceiling areas?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>