force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_RoofInternallyAccessible__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RoofInternallyAccessible__c</fullName>
    <description>Field used to capture the &quot;Roof internally accessible&quot;. Used in the RAAC Concrete Survey</description>
    <label>Roof internally accessible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_YesOrNo</valueSetName>
    </valueSet>
</CustomField>