force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_SelectInternalRoofConstruction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SelectInternalRoofConstruction__c</fullName>
    <description>Field used to capture the &quot;Select internal roof construction&quot;. Used in the RAAC Concrete Survey</description>
    <label>Select internal roof construction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bare Concrete</fullName>
            </value>
            <value>
                <fullName>Plasterboard</fullName>
            </value>
            <value>
                <fullName>Suspended ceiling</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>