force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_SelectWhatYouCanSeeEvidenceOf__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SelectWhatYouCanSeeEvidenceOf__c</fullName>
    <description>Field used in RAAC form to display the evidences values</description>
    <label>Select what you can see evidence of</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bubbles on edge or face of roof panel</fullName>
            </value>
            <value>
                <fullName>Cracking at the supporting locations</fullName>
            </value>
            <value>
                <fullName>Deflection of roof panels</fullName>
            </value>
            <value>
                <fullName>Rust staining or corrosion of reinforcements</fullName>
            </value>
            <value>
                <fullName>Cracking or spalling of the internal surface</fullName>
            </value>
            <value>
                <fullName>Moisture ingress and degradation of the internal roof finish</fullName>
            </value>
            <value>
                <fullName>Water ponding on the surface of roof</fullName>
            </value>
            <value>
                <fullName>Deflation of roof panels</fullName>
                <isActive>false</isActive>
                <label>Deflation of roof panels</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>