force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_SiteENID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SiteENID__c</fullName>
    <description>Field to store the Site EIND</description>
    <label>Site ENID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>