force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_SpecifyInternalRoofConstruction__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SpecifyInternalRoofConstruction__c</fullName>
    <description>Field used to capture the &quot;Please specify internal roof construction&quot;. Used in the RAAC Concrete Survey</description>
    <label>Specify internal roof construction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>