force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_SubstationName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SubstationName__c</fullName>
    <label>Substation name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>