force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_WhatIsRequiredToAccess__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WhatIsRequiredToAccess__c</fullName>
    <description>Field used to capture the &quot;What is required to access?&quot;. Used in the RAAC Concrete Survey</description>
    <label>What is required to access</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>