force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_WidthOfRoofPanels__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WidthOfRoofPanels__c</fullName>
    <description>Field used to capture the &quot;Width of roof panels (mm)&quot;. Used in the RAAC Concrete Survey</description>
    <label>Width of roof panels (mm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>