force-app/main/default/objects/SPEN_IMForm__c/fields/SPEN_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to store Work Order record.</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>I&amp;M Forms</relationshipLabel>
    <relationshipName>I_M_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>