force-app/main/default/objects/SPEN_IMForm__c/recordTypes/SPEN_RAACConcreteSurvey.recordType-meta.xml
<RecordType>
    <fullName>SPEN_RAACConcreteSurvey</fullName>
    <active>true</active>
    <description>Record type used to identify the RAAC Concrete Survey forms</description>
    <label>RAAC Concrete Survey</label>
</RecordType>