force-app/main/default/objects/SPEN_IMForm__c/listViews/SPEN_RAACConcreteSurvey.listView-meta.xml
<ListView>
    <fullName>SPEN_RAACConcreteSurvey</fullName>
    <columns>NAME</columns>
    <columns>SPEN_District__c</columns>
    <columns>SPEN_SubstationName__c</columns>
    <columns>SPEN_BuildingType__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPEN_IMForm__c.SPEN_RAACConcreteSurvey</value>
    </filters>
    <label>RAAC Concrete Survey</label>
</ListView>